clang/test/BSC/Negative/SafeZone/safe_arithmetic_conversion/bitfield_assignment.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct S {
  unsigned int x : 3;
  signed int y : 5;
  unsigned int z : 1;
  signed int w : 4;
  unsigned char uc : 3;
  unsigned short us : 10;
  _Bool b : 1;
};

// Assignment: constant values that overflow the bitfield width
_Safe void test_constant_overflow(void) {
  struct S s;
  s.x = 8;   // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
             // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  s.y = 16;  // expected-error {{implicit conversion from type 'int' to signed bit-field of width 5 is forbidden in the safe zone}}
  s.y = -17; // expected-error {{implicit conversion from type 'int' to signed bit-field of width 5 is forbidden in the safe zone}}
  s.z = 2;   // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 1 is forbidden in the safe zone}} \
             // expected-note {{value can be masked to fit, e.g. '(expr) & 0x1u'}}
}

// Assignment: negative constant to unsigned bitfield
_Safe void test_negative_to_unsigned(void) {
  struct S s;
  s.x = -1;  // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
             // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  s.z = -1;  // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 1 is forbidden in the safe zone}} \
             // expected-note {{value can be masked to fit, e.g. '(expr) & 0x1u'}}
  s.uc = -1; // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
             // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  s.us = -1; // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 10 is forbidden in the safe zone}} \
             // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3ffu'}}
}

// Assignment: signed int bitfield constant overflow
_Safe void test_signed_constant_overflow(void) {
  struct S s;
  s.w = 8;   // expected-error {{implicit conversion from type 'int' to signed bit-field of width 4 is forbidden in the safe zone}}
  s.w = -9;  // expected-error {{implicit conversion from type 'int' to signed bit-field of width 4 is forbidden in the safe zone}}
}

// Assignment: unsigned char bitfield constant overflow
_Safe void test_unsigned_char_constant_overflow(void) {
  struct S s;
  s.uc = 8;  // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
             // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
}

// Assignment: unsigned short bitfield constant overflow
_Safe void test_unsigned_short_constant_overflow(void) {
  struct S s;
  s.us = 1024; // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 10 is forbidden in the safe zone}} \
               // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3ffu'}}
}

// Assignment: same-type variable wider than the bitfield
_Safe void test_variable_overflow(void) {
  struct S s;
  unsigned int val = 10;
  s.x = val;  // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
              // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}

  // unsigned char widens safely to unsigned int, but doesn't fit width 3
  unsigned char c = 5;
  s.x = c;    // expected-error {{implicit conversion from type 'unsigned char' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
              // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}

  // unsigned char (non-negative, width 8) -> signed int:5 — strict inequality fails (8 >= 5)
  unsigned char c2 = 5;
  s.y = c2;   // expected-error {{implicit conversion from type 'unsigned char' to signed bit-field of width 5 is forbidden in the safe zone}}
}

// Assignment: signed variable to unsigned bitfield
_Safe void test_signed_var_to_unsigned(void) {
  struct S s;
  int i = 5;
  s.x = i;    // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
              // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  s.us = i;   // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 10 is forbidden in the safe zone}} \
              // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3ffu'}}
}

// Assignment: same-type variable overflow for signed bitfield
_Safe void test_variable_to_signed(void) {
  struct S s;
  int i = 5;
  s.w = i;    // expected-error {{implicit conversion from type 'int' to signed bit-field of width 4 is forbidden in the safe zone}}
  s.y = i;    // expected-error {{implicit conversion from type 'int' to signed bit-field of width 5 is forbidden in the safe zone}}

  // unsigned int -> int:5
  unsigned int u = 5;
  s.y = u;    // expected-error {{implicit conversion from type 'unsigned int' to signed bit-field of width 5 is forbidden in the safe zone}}
}

// Assignment: same-type variable overflow for unsigned char/short bitfields
_Safe void test_variable_to_uchar_ushort(void) {
  struct S s;
  unsigned char c = 5;
  s.uc = c;   // expected-error {{implicit conversion from type 'unsigned char' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
              // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}

  unsigned short sh = 5;
  s.us = sh;  // expected-error {{implicit conversion from type 'unsigned short' to unsigned bit-field of width 10 is forbidden in the safe zone}} \
              // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3ffu'}}

  // Cross-type narrowing: unsigned int -> unsigned char/short bitfield
  unsigned int u = 10;
  s.uc = u;   // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
              // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  s.us = u;   // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 10 is forbidden in the safe zone}} \
              // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3ffu'}}
}

// Assignment: unsigned char -> signed bitfield (widening type passes, bitfield catches)
_Safe void test_unsigned_char_to_signed_bitfield(void) {
  struct S s;
  unsigned char c = 5;
  // unsigned char (width 8, non-negative) -> signed int:4 — strict: 8 >= 4, error
  s.w = c;    // expected-error {{implicit conversion from type 'unsigned char' to signed bit-field of width 4 is forbidden in the safe zone}}
}

// Initialization: constant values that overflow
_Safe void test_init_overflow(void) {
  struct S s1 = { 8, 0, 0 };   // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                               // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  struct S s2 = { 0, 16, 0 };  // expected-error {{implicit conversion from type 'int' to signed bit-field of width 5 is forbidden in the safe zone}}
  struct S s3 = { .x = 8 };    // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                               // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  struct S s4 = { .z = 2 };    // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 1 is forbidden in the safe zone}} \
                               // expected-note {{value can be masked to fit, e.g. '(expr) & 0x1u'}}
  struct S s5 = { .w = 8 };    // expected-error {{implicit conversion from type 'int' to signed bit-field of width 4 is forbidden in the safe zone}}
  struct S s6 = { .uc = 8 };   // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                               // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  struct S s7 = { .us = 1024 }; // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 10 is forbidden in the safe zone}} \
                                // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3ffu'}}
}

// Bitwise operators: expressions still too wide for the bitfield -> error
_Safe void test_bitwise_and_too_wide(void) {
  struct S s;
  unsigned int val = 100;

  s.x = val & 0xfu;   // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                      // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  s.z = val & 0x3u;   // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 1 is forbidden in the safe zone}} \
                      // expected-note {{value can be masked to fit, e.g. '(expr) & 0x1u'}}
}

_Safe void test_bitwise_or_too_wide(void) {
  struct S s;
  unsigned int val = 100;

  s.x = (val & 0xfu) | (val & 0x4u);  // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                                      // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
}

_Safe void test_bitwise_xor_too_wide(void) {
  struct S s;
  unsigned int val = 100;

  s.x = (val & 0xfu) ^ (val & 0x4u);  // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                                      // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
}

// Bitfield operands in bitwise ops: result too wide for target bitfield
_Safe void test_bitfield_operand_or_too_wide(void) {
  struct S s;
  s.x = 5; s.us = 100;

  // | of two bitfields where result width exceeds target
  s.x = s.x | s.us;    // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                       // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  s.z = s.x | s.z;     // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 1 is forbidden in the safe zone}} \
                       // expected-note {{value can be masked to fit, e.g. '(expr) & 0x1u'}}

  // | of bitfield with constant that makes result too wide
  s.x = s.x | 0x8u;    // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                       // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
}

_Safe void test_bitfield_operand_xor_too_wide(void) {
  struct S s;
  s.x = 5; s.us = 100;

  // ^ of two bitfields where result width exceeds target
  s.x = s.x ^ s.us;    // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                       // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  s.z = s.x ^ s.z;     // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 1 is forbidden in the safe zone}} \
                       // expected-note {{value can be masked to fit, e.g. '(expr) & 0x1u'}}

  // ^ of bitfield with constant that makes result too wide
  s.x = s.x ^ 0x8u;    // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                       // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
}

_Safe void test_bitfield_operand_and_too_wide(void) {
  struct S s;
  s.x = 5; s.us = 100;

  // & with mask wider than target bitfield
  s.x = s.us & 0xfu;   // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                       // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  s.z = s.x & 0x3u;    // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 1 is forbidden in the safe zone}} \
                       // expected-note {{value can be masked to fit, e.g. '(expr) & 0x1u'}}
}

// _Bool bitfield: constant values that don't fit
_Safe void test_bool_bitfield_constant_overflow(void) {
  struct S s;
  s.b = 2;   // expected-error {{implicit conversion from type 'int' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
  s.b = -1;  // expected-error {{implicit conversion from type 'int' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
  s.b = 100; // expected-error {{implicit conversion from type 'int' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
  unsigned char uc = 0x1;
  s.b = uc & 0x3; // expected-error {{implicit conversion from type 'int' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
}

// _Bool bitfield: variable assignments (type mismatch caught by type-level check)
_Safe void test_bool_bitfield_variable(void) {
  struct S s;
  int i = 0;
  s.b = i;   // expected-error {{implicit conversion from type 'int' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
  unsigned int u = 1;
  s.b = u;   // expected-error {{implicit conversion from type 'unsigned int' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
  unsigned char c = 0;
  s.b = c;   // expected-error {{implicit conversion from type 'unsigned char' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
  short sh = 1;
  s.b = sh;  // expected-error {{implicit conversion from type 'short' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
}

// _Bool bitfield: initialization with overflowing constants
_Safe void test_bool_bitfield_init_overflow(void) {
  struct S s1 = { .b = 2 };   // expected-error {{implicit conversion from type 'int' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
  struct S s2 = { .b = -1 };  // expected-error {{implicit conversion from type 'int' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
}
